@@ -87,16 +87,7 @@
 
                       </section>
                       <section class="theme-list">
-                        <h2>Thema's</h2>
-                        <ul>
-                          <li><a href="theme_detail.html">Klimaat</a></li>
-                          <li><a href="theme_detail.html">Materialen</a></li>
-                          <li><a href="theme_detail.html">Hinder</a></li>
-                          <li class="active"><a href="theme_detail.html">Biodiversiteit</a></li>
-                          <li><a href="theme_detail.html">Bestuurskwaliteit</a></li>
-                          <li><a href="theme_detail.html">Vergroening van de economie</a></li>
-                          <li><a href="theme_detail.html">Andere thema's</a></li>
-                        </ul>
+                        <metal:block use-macro="context/@@items/macros/themelist" />
                       </section>
                     </nav>
 
